fixed flickering bug in webkit

--- a/CodePrinter.less
+++ b/CodePrinter.less
@@ -25,7 +25,8 @@
     min-height:20px;
     overflow:hidden;
     position:relative; top:0;
-    
+    -webkit-transform:translate3d(0,0,0);
+
     &, * {
         -webkit-tap-highlight-color:transparent;
         -webkit-font-smoothing:subpixel-antialiased;
